# lightning-pose-app

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Procfile.dev  README.md  build.sh  build_release.sh  build_ui.sh  development.md  transcode_fine.py
.github/workflows/: lint.yml  publish.yml  tests.yml
app_server/: .gitignore  README.md  pyproject.toml
app_server/src/litpose_app/: __init__.py  config.py  config_default.yaml  config_default_multiview.yaml  datatypes.py  deps.py  flask_app.py  flask_deps.py  flask_main.py  main.py  project.py  rootconfig.py  train_scheduler.py  transcode_fine.py
app_server/src/litpose_app/flask_routes/: __init__.py  configs.py  extract_frames.py  ffprobe.py  labeler_bundle_adjust.py  labeler_find_label_files.py  labeler_multiview_autolabel.py  labeler_save_mvframe.py  labeler_write_multifile.py  model_endpoints.py  models.py  project.py  rglob.py
app_server/src/litpose_app/migrations/: __init__.py  backfill_creation_datetime_002.py  ensure_project_yaml_003.py  fix_config_data_dirs_004.py  unlabeled_to_jsonl_001.py
app_server/src/litpose_app/paths/: __init__.py  path_util.py  path_util_legacy.py
app_server/src/litpose_app/resources/: Caddyfile
app_server/src/litpose_app/routes/: config_root.py  configs.py  extract_frames.py  ffprobe.py  files.py  inference.py  labeling.py  models.py  project.py  rglob.py  transcode.py  videos.py
app_server/src/litpose_app/routes/labeler/: __init__.py  bundle_adjust.py  find_label_files.py  multiview_autolabel.py  save_mvframe.py  test_bundle_adjust.ipynb  test_multiview_autolabel.ipynb  write_multifile.py
app_server/src/litpose_app/scripts/: run_eks.py
app_server/src/litpose_app/tasks/: __init__.py  extract_frames.py  transcode_fine.py
app_server/src/litpose_app/utils/: __init__.py  calibrations.py  check_for_upgrade.py  config_watcher.py  enqueue.py  file_response.py  fix_empty_first_row.py  gpu_lock.py  mv_label_file.py
app_server/src/litpose_app/utils/inference/: fake_predict.py  predict_wrapper.py
app_server/src/litpose_app/utils/video/: __init__.py  export_frames.py  frame_selection.py
app_server/tests/: conftest.py  test_deps.py  test_predict_wrapper.py  test_project.py  test_transcode_fine.py
app_server/tests/migrations/: test_ensure_project_yaml_003.py  test_fix_config_data_dirs_004.py
app_server/tests/routes/: test_configs.py  test_ffprobe.py  test_find_label_files.py  test_inference.py  test_project.py  test_project_delete.py  test_project_stats.py  test_videos.py
app_server/tests/utils/: test_calibrations.py
docs/: eks-model-feature.md  locking-strategy.md
docs/design/: inference-log-streaming-addendum.md  unified-inference-plan.md
tests/routes/: test_project.py  test_project_e2e.py
web_ui/: .gitignore  .prettierignore  README.md  angular.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts
web_ui/.storybook/: preview.ts  tsconfig.json
web_ui/docs/: activated_route_provider_error.md  context.md
web_ui/e2e/: cleanup-e2e-projects.manual.ts  cleanup-e2e-projects.spec.ts  create-singleview-project.spec.ts  delete-e2e-project.spec.ts  navigation.spec.ts  new-project.spec.ts  smoke.spec.ts
web_ui/src/: fontfaces.css  index.html  proxy.conf.json  styles.css
(+250 files in other folders)
