[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "litpose_app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "wcmatch",
    "tomli",
    "tomli_w",
]

[tool.poetry]
packages = [
    { include = "litpose_app", from = "src" }
]

