[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lightning-pose-app"
version = "2.3.0.0"
description = "Lightning Pose user interface for labeling, training, and visualization"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Karan Sikka" },
    { name = "Matt Whiteaway" },
]

dependencies = [
    "aiofiles~=24.1.0",
    "aniposelib~=0.7.2",
    "fastapi~=0.116.0",
    "honcho~=2.0",
    "omegaconf~=2.3.0",
    "pandas~=2.3.0",
    "uvicorn[standard]~=0.35.0",
    "wcmatch~=10.0",
    "tomli~=2.2.0",
    "tomli_w~=1.2.0",
    "opencv-python~=4.12.0.88",
    "tqdm~=4.67.1",
    "scikit-learn~=1.7.1",
    "portalocker~=3.2.0",
    "psutil~=7.0.0",
    "PyYAML~=6.0.2",
    "python-multipart",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "httpx~=0.28.0",
    "pre-commit",
    "pytest~=8.4.0",
    "pytest-mock~=3.14.0",
    "pytest-asyncio~=1.0.0"
]

[project.urls]
repository = "https://github.com/paninski-lab/lightning-pose-app"
documentation = "https://lightning-pose.readthedocs.io/"

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.ipynb",
    "src/litpose_app/paths",  # legacy code, not actively maintained
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports/variables)
    "I",   # isort
    "UP",  # pyupgrade (modernize syntax)
    "B",   # flake8-bugbear (real bugs: mutable defaults, broad excepts)
]
ignore = [
    "B006",  # mutable default arguments used intentionally in some places
    "B008",  # Depends() in argument defaults is standard FastAPI pattern
    "B904",  # raise-without-from-inside-except: not enforced in existing codebase
    "E203",  # whitespace before ':' conflicts with black-style slice formatting
    "E402",  # module-level imports not at top: intentional late imports in several modules
    "E501",  # line too long: existing codebase has many long strings/comments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["litpose_app"]

[tool.poetry]
packages = [
    { include = "litpose_app", from = "src" }
]
# We need this to override the .gitignore.
include = ["**/ngdist/**/*"]
